--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="login_label">Log in</string>
     <string name="title_activity_timeline">My Timeline</string>
     <string name="title_activity_twitter_compose">Compose Tweet</string>
+    <string name="title_activity_profile_view">User Profile</string>
 
 </resources>
